--- a/pixi/pixi/package.json
+++ b/pixi/pixi/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "lodash-es": "^4.17.21",
     "pixi.js": "^7.2.4",
     "vue": "^3.3.2"
