--- a/front/package.json
+++ b/front/package.json
@@ -17,12 +17,13 @@
     "bootstrap": "^5.2.3",
     "datatables.net-bs5": "^1.13.4",
     "datatables.net-vue3": "^2.1.0",
+    "lodash-es": "^4.17.21",
     "mdi-vue": "^3.0.13",
     "mobile-device-detect": "^0.4.3",
+    "moment-timer": "^1.3.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue3-storage": "^0.1.11",
-    "lodash-es": "^4.17.21"
+    "vue3-storage": "^0.1.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
