ready for socket game

--- a/game-engine/package.json
+++ b/game-engine/package.json
@@ -28,6 +28,7 @@
     "ajv": "^8.11.2",
     "content-type": "^1.0.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
@@ -51,6 +52,11 @@
     "#utils/*": "./src/utils/*.js"
   },
   "nodemonConfig": {
-    "ignore": ["**/deploy/**", "**/test/**", "**/todo/**", "**/docs/**"]
+    "ignore": [
+      "**/deploy/**",
+      "**/test/**",
+      "**/todo/**",
+      "**/docs/**"
+    ]
   }
 }
