--- a/front/.env
+++ b/front/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL = http://localhost/backgammon/backend/web
+VITE_BASE_URL = http://localhost:5173
+VITE_BACKEND_BASE_URL = http://localhost/backgammon/backend/web
