--- a/game-engine/package.json
+++ b/game-engine/package.json
@@ -35,6 +35,7 @@
     "joi": "^17.7.0",
     "lodash-es": "^4.17.21",
     "mongodb": "^4.12.1",
+    "nodemon": "^3.0.1",
     "raw-body": "^2.5.1",
     "socket.io": "^4.5.4"
   },
