--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "mdi-vue": "^3.0.13",
     "mobile-device-detect": "^0.4.3",
     "moment-timer": "^1.3.0",
+    "primevue": "^3.40.1",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
