--- a/front/.env_codeplaya
+++ b/front/.env_codeplaya
@@ -1,3 +1,3 @@
-VITE_BASE_URL = http://codeplaya.com/demo/backgammon
-VITE_BACKEND_BASE_URL = http://codeplaya.com/demo/backgammon/backend/web
-VITE_BACKEND_SOCKET_URL = http://54.36.118.223:3002
+VITE_BASE_URL = https://codeplaya.com/demo/backgammon
+VITE_BACKEND_BASE_URL = https://codeplaya.com/demo/backgammon/backend/web
+VITE_BACKEND_SOCKET_URL = https://codeplaya:3002
