--- a/front/package.json
+++ b/front/package.json
@@ -23,10 +23,12 @@
     "mobile-device-detect": "^0.4.3",
     "moment-timer": "^1.3.0",
     "primeflex": "^3.3.1",
-    "primevue": "^3.40.1",
+    "primevue": "^3.42.0",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue-scrollable-tabs": "^1.0.5",
+    "vue3-loading-overlay": "^0.0.0",
     "vue3-storage": "^0.1.11"
   },
   "devDependencies": {
