--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "mobile-device-detect": "^0.4.3",
     "moment-timer": "^1.3.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primevue": "^3.42.0",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
