--- a/front/.env_online
+++ b/front/.env_online
@@ -1,3 +1,4 @@
 VITE_BASE_URL = https://demo.codeplaya.com/backgammon
 VITE_BACKEND_BASE_URL = https://demo.codeplaya.com/backgammon/backend/web
 VITE_BACKEND_SOCKET_URL = https://demo.codeplaya.com:2053
+VITE_ADMIN_BASE_URL=http://localhost:5173
