--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,4 @@
 VITE_BASE_URL = http://localhost:5173
 VITE_BACKEND_BASE_URL = http://localhost/allbet-backgammon/backend/web
 VITE_BACKEND_SOCKET_URL = http://localhost:3002
+VITE_ADMIN_BASE_URL=http://localhost:5173
